AquaticAlchemy/force-app/main/default/objects/Class_Registration__c/Class_Registration__c.object-meta.xml
<CustomObject>
    <label>Class Registration</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>