AquaticAlchemy/force-app/main/default/objects/Class_Registration__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge</label>
    <referenceTo>Charge__c</referenceTo>
    <relationshipLabel>Class Registrations</relationshipLabel>
    <relationshipName>Class_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>