AquaticAlchemy/force-app/main/default/objects/Class_Registration__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Registration For</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Registrations</relationshipLabel>
    <relationshipName>Class_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>