AquaticAlchemy/force-app/main/default/objects/Class_Registration__c/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <description>Exact date this registration took place.</description>
    <label>Date Registered</label>
    <required>true</required>
    <type>Date</type>
</CustomField>